--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
-{% load static %} <!-- New LiNE -->
 <html>
     <head>
         <title>Rango</title>
     </head>
     <body>
-        <h1>Rango says ... </h1>
-        hello world! <strong>{{boldmessage}}</strong><br />
-        <a href="/rango/about/">About</a><br />
-        <img src="{% static "rango.jpg" %}" alt="Picture of Rango" />
+        <h1>Rango says ... hello world!</h1>
+	{% if categories %}
+		<ul>
+			{% for category in categories %}
+			<li><a href="/rango/category/{{category.url}}">{{category.name}}</li>
+			{% endfor %}
+		</ul>
+	{% else %}
+		<strong>There are no categories present.</strong>
+	{% endif %}
+        <a href="/rango/add_category/"> Add a New Category</a>
     </body>
 </html>
