--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -1,22 +1,18 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title> Rango</title>
-    </head>
-    <body>
-        <h1>Add a Category</h1>
-        <form id="category_form" method="post" action="/rango/add_category/">
-            {% csrf_token %}
-            {% for hidden in form.hidden_fields %}
-                {{hidden}}
-            {% endfor %}
+{% extends 'rango/base.html' %}
+{% block title %}Add a New Category{% endblock %}    
+{% block body_block %}        
+    <h1>Add a Category</h1>
+    <form id="category_form" method="post" action="/rango/add_category/">
+        {% csrf_token %}
+        {% for hidden in form.hidden_fields %}
+            {{hidden}}
+        {% endfor %}
 
-            {% for field in form.visible_fields %}
-                {{ field.errors }}
-                {{ field.help_text }}
-		{{ field }}
-	    {% endfor %}
-	    <input type="submit" name="submit" value="Create Category" />
-	</form>
-    </body>
-</html>
+        {% for field in form.visible_fields %}
+            {{ field.errors }}
+            {{ field.help_text }}
+	    {{ field }}
+	{% endfor %}
+	<input type="submit" name="submit" value="Create Category" />
+    </form>
+{% endblock %}
