--- a/templates/rango/index.html
+++ b/templates/rango/index.html
@@ -1,19 +1,18 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Rango</title>
-    </head>
-    <body>
+{% extends 'rango/base.html' %}
+{% block title %}Rango{% endblock %}  
+{% block body_block %}  
+    {% if user.is_authenticated %}
+	<h1>Rango says ... hello {{ user.username }}!</h1>
+    {% else %}
         <h1>Rango says ... hello world!</h1>
-	{% if categories %}
-		<ul>
-			{% for category in categories %}
-			<li><a href="/rango/category/{{category.url}}">{{category.name}}</li>
-			{% endfor %}
-		</ul>
-	{% else %}
-		<strong>There are no categories present.</strong>
-	{% endif %}
-        <a href="/rango/add_category/"> Add a New Category</a>
-    </body>
-</html>
+    {% endif %}
+    {% if categories %}
+	<ul>
+   	    {% for category in categories %}
+		<li><a href="/rango/category/{{category.url}}">{{category.name}}</li>
+	    {% endfor %}
+	</ul>
+    {% else %}
+	<strong>There are no categories present.</strong>
+    {% endif %}
+{% endblock %}
